refactor: improve code quality and type safety across frontend
- Updated biome.json to allow PascalCase for functions and disable console warnings
- Replaced deprecated Node.js module imports with node: protocol
- Enhanced type safety in API handlers with proper TypedServerSupabase usage and explicit type annotations
- Migrated to insertSingle helper for consistent database operations
- Removed unused variables and improved naming conventions throughout codebase

--- a/frontend/biome.json
+++ b/frontend/biome.json
@@ -161,7 +161,7 @@
                 "selector": { "kind": "typeAlias", "scope": "global" }
               },
               {
-                "formats": ["camelCase"],
+                "formats": ["camelCase", "PascalCase"],
                 "selector": { "kind": "function", "scope": "global" }
               },
               {
@@ -189,7 +189,7 @@
         "useAwait": "error",
         "noCatchAssign": "error",
         "noConfusingVoidType": "error",
-        "noConsole": "warn",
+        "noConsole": "off",
         "noDebugger": "error",
         "noDuplicateCase": "error",
         "noDuplicateClassMembers": "error",
