chore: disable key sorting for config files in biome
- Added override to turn off automatic key sorting for package.json, components.json, and tsconfig.json to preserve conventional ordering

--- a/frontend/biome.json
+++ b/frontend/biome.json
@@ -250,6 +250,16 @@
           }
         }
       }
+    },
+    {
+      "includes": ["package.json", "components.json", "tsconfig.json"],
+      "assist": {
+        "actions": {
+          "source": {
+            "useSortedKeys": "off"
+          }
+        }
+      }
     }
   ],
 
