--- a/frontend/package.json
+++ b/frontend/package.json
@@ -80,6 +80,7 @@
     "react-hook-form": "^7.66.0",
     "react-syntax-highlighter": "^16.1.0",
     "recharts": "^3.3.0",
+    "streamdown": "^1.4.0",
     "tailwind-merge": "^3.3.1",
     "use-stick-to-bottom": "^1.1.1",
     "uuid": "^13.0.0",
