refactor: update biome configuration for linter rules
- Added linter rule to disable naming convention enforcement for `next.config.ts` to accommodate Next.js requirements.
- Removed deprecated biome-ignore comments related to naming conventions in the Next.js image configuration.

--- a/frontend/biome.json
+++ b/frontend/biome.json
@@ -339,6 +339,16 @@
           }
         }
       }
+    },
+    {
+      "includes": ["next.config.ts"],
+      "linter": {
+        "rules": {
+          "style": {
+            "useNamingConvention": "off"
+          }
+        }
+      }
     }
   ],
 
