feat(biome): add linter configuration for globals.css
- Introduced a new configuration in biome.json to disable the CSS linter for globals.css, allowing for more flexible styling without naming convention enforcement.

--- a/frontend/biome.json
+++ b/frontend/biome.json
@@ -349,6 +349,14 @@
           }
         }
       }
+    },
+    {
+      "includes": ["src/app/globals.css"],
+      "css": {
+        "linter": {
+          "enabled": false
+        }
+      }
     }
   ],
 
