refactor(biome): enhance linter configurations and improve component consistency
- Added linter rules for `loading-skeletons.tsx` and `query-states.tsx` to disable specific accessibility checks, improving flexibility in component development.
- Updated property names in `trip-suggestions.tsx` and `upcoming-flights.tsx` to follow camelCase convention, enhancing consistency across the codebase.
- Improved test cases in `trip-suggestions.test.tsx` and `upcoming-flights.test.tsx` to reflect the updated property names, ensuring alignment with component changes.
- Enhanced documentation in `loading-skeletons.tsx` and `query-states.tsx` for better clarity and maintainability.

--- a/frontend/biome.json
+++ b/frontend/biome.json
@@ -365,6 +365,29 @@
       }
     },
     {
+      "includes": ["**/loading-skeletons.tsx"],
+      "linter": {
+        "rules": {
+          "a11y": {
+            "useSemanticElements": "off"
+          },
+          "suspicious": {
+            "noArrayIndexKey": "off"
+          }
+        }
+      }
+    },
+    {
+      "includes": ["**/query-states.tsx"],
+      "linter": {
+        "rules": {
+          "suspicious": {
+            "noArrayIndexKey": "off"
+          }
+        }
+      }
+    },
+    {
       "includes": ["**/input-group.tsx"],
       "linter": {
         "rules": {
