refactor: enhance type safety in use-zod-form hook and update biome configuration
- Updated the `use-zod-form` hook to improve type safety by replacing generic type parameters with more specific ones, ensuring better type inference throughout the hook.
- Modified the biome configuration to include a new linter rule for `currency-store.ts`, enforcing naming conventions for improved code consistency.

--- a/frontend/biome.json
+++ b/frontend/biome.json
@@ -424,6 +424,16 @@
         }
       },
       "includes": ["src/app/globals.css"]
+    },
+    {
+      "includes": ["**/currency-store.ts"],
+      "linter": {
+        "rules": {
+          "style": {
+            "useNamingConvention": "warn"
+          }
+        }
+      }
     }
   ],
 
