--- a/frontend/biome.json
+++ b/frontend/biome.json
@@ -434,6 +434,16 @@
           }
         }
       }
+    },
+    {
+      "includes": ["playwright.config.ts"],
+      "linter": {
+        "rules": {
+          "style": {
+            "useNamingConvention": "off"
+          }
+        }
+      }
     }
   ],
 
