chore: consolidate .gitignore files and update ignored patterns
- Merged frontend-specific ignore rules into the main .gitignore file for better organization.
- Added new entries to ignore build artifacts and environment files related to the frontend workspace.

--- a/.gitignore
+++ b/.gitignore
@@ -336,3 +336,9 @@ scan-results/
 # Project specific files
 .agent/
 supabase/.temp/
+ 
+# Frontend workspace (consolidated from frontend/.gitignore)
+frontend/next-env.d.ts
+frontend/.vercel
+frontend/.pnpm-debug.log*
+frontend/build/
