fix: update biome.json and package.json for configuration adjustments
- Set "useIgnoreFile" to false in biome.json to modify version control settings.
- Added "test:ci" script to package.json for continuous integration testing.
- Updated test setup comments for clarity and improved test structure in various test files.
- Adjusted naming conventions in test assertions for consistency with the codebase.

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "test:short": "vitest run --test-timeout=3000 --hook-timeout=3000 --teardown-timeout=3000",
     "test:ui": "vitest --ui",
     "test:coverage": "vitest run --coverage",
+    "test:ci": "vitest run --coverage",
     "test:e2e": "playwright test",
     "codemod:ai-route:dry": "npx jscodeshift -t ../scripts/codemods/ai-route-v6-upgrade.js \"src/app/**/route.ts\" --parser=ts -d -p",
     "codemod:ai-route": "npx jscodeshift -t ../scripts/codemods/ai-route-v6-upgrade.js \"src/app/**/route.ts\" --parser=ts",
